app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-nginx
  namespace: argo-nginx
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports: 
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
